--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "react项目使用typescript脚本开发",
   "scripts": {
-    "dev": "webpack-dev-server --config ./bin/webpack.dev.conf.ts"
+    "dev": "ts-node ./bin/webpack.dev.conf.ts"
   },
   "repository": {
     "type": "git",
@@ -29,11 +29,10 @@
   "devDependencies": {
     "@types/node": "^13.9.3",
     "@types/webpack": "^4.41.8",
-    "@types/webpack-dev-server": "^3.10.1",
-    "@types/webpack-merge": "^4.1.5",
     "awesome-typescript-loader": "^5.2.1",
     "source-map-loader": "^0.2.4",
     "ts-node": "^8.8.1",
+    "tsconfig-paths": "^3.9.0",
     "typescript": "^3.8.3"
   }
 }
