--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "react项目使用typescript脚本开发",
   "scripts": {
-    "dev": "ts-node ./bin/webpack.dev.conf.ts"
+    "dev": "ts-node bin/webpack.dev.conf.ts"
   },
   "repository": {
     "type": "git",
@@ -31,8 +31,10 @@
     "@types/webpack": "^4.41.8",
     "awesome-typescript-loader": "^5.2.1",
     "source-map-loader": "^0.2.4",
+    "start-server-webpack-plugin": "^2.2.5",
     "ts-node": "^8.8.1",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "webpack-node-externals": "^1.7.2"
   }
 }
