--- a/package.json
+++ b/package.json
@@ -27,6 +27,11 @@
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
+    "css-loader": "^3.4.2",
+    "html-loader": "^1.0.0",
+    "node-sass": "^4.13.1",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.1.3",
     "ts-loader": "^6.2.2",
     "typescript": "^3.8.3",
     "webpack": "^4.42.1",
