--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "react项目使用typescript脚本开发",
   "scripts": {
-    "dev": "npx webpack --config ./bin/webpack.dev.conf.js"
+    "dev": "npx webpack-dev-server --config ./bin/webpack.dev.conf.js",
+    "build": "npx webpack --config ./bin/webpack.prod.conf.js"
   },
   "repository": {
     "type": "git",
@@ -21,15 +22,23 @@
   },
   "homepage": "https://github.com/zhangwenbin0516/react-ts-front#readme",
   "dependencies": {
-    "@types/react": "^16.9.25",
-    "@types/react-dom": "^16.9.5",
+    "@types/react-redux": "^7.1.7",
+    "antd": "^4.1.0",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
+    "@types/react": "^16.9.27",
+    "@types/react-dom": "^16.9.5",
+    "babel-plugin-import": "^1.13.0",
     "css-loader": "^3.4.2",
     "html-loader": "^1.0.0",
+    "html-webpack-plugin": "^4.0.3",
+    "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
+    "rmdir": "^1.2.0",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
     "ts-loader": "^6.2.2",
