--- a/package.json
+++ b/package.json
@@ -22,16 +22,19 @@
   },
   "homepage": "https://github.com/zhangwenbin0516/react-ts-front#readme",
   "dependencies": {
-    "@types/react-redux": "^7.1.7",
     "antd": "^4.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "redux": "^4.0.5"
   },
   "devDependencies": {
     "@types/react": "^16.9.27",
     "@types/react-dom": "^16.9.5",
+    "@types/react-redux": "^7.1.7",
+    "@types/react-router": "^5.1.5",
     "babel-plugin-import": "^1.13.0",
     "css-loader": "^3.4.2",
     "html-loader": "^1.0.0",
