--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/react-dom": "^16.9.5",
     "@types/react-redux": "^7.1.7",
     "@types/react-router": "^5.1.5",
+    "@types/react-router-dom": "^5.1.3",
     "babel-plugin-import": "^1.13.0",
     "css-loader": "^3.4.2",
     "html-loader": "^1.0.0",
