--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
   "homepage": "https://github.com/zhangwenbin0516/react-ts-front#readme",
   "dependencies": {
     "antd": "^4.1.0",
+    "awesome-typescript-loader": "^5.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "source-map-loader": "^0.2.4",
+    "typescript": "^3.8.3"
   },
   "devDependencies": {
     "@types/react": "^16.9.27",
@@ -45,8 +48,6 @@
     "rmdir": "^1.2.0",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
-    "ts-loader": "^6.2.2",
-    "typescript": "^3.8.3",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3",
