--- a/package.json
+++ b/package.json
@@ -22,15 +22,15 @@
   },
   "homepage": "https://github.com/zhangwenbin0516/react-ts-front#readme",
   "dependencies": {
+    "@types/react-router-dom": "^5.1.4",
+    "@types/redux": "^3.6.0",
     "antd": "^4.1.0",
-    "awesome-typescript-loader": "^5.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
-    "source-map-loader": "^0.2.4",
     "typescript": "^3.8.3"
   },
   "devDependencies": {
@@ -38,7 +38,6 @@
     "@types/react-dom": "^16.9.5",
     "@types/react-redux": "^7.1.7",
     "@types/react-router": "^5.1.5",
-    "@types/react-router-dom": "^5.1.3",
     "babel-plugin-import": "^1.13.0",
     "css-loader": "^3.4.2",
     "html-loader": "^1.0.0",
@@ -47,7 +46,9 @@
     "node-sass": "^4.13.1",
     "rmdir": "^1.2.0",
     "sass-loader": "^8.0.2",
+    "source-map-loader": "^0.2.4",
     "style-loader": "^1.1.3",
+    "ts-loader": "^6.2.2",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3",
