--- a/.babelrc
+++ b/.babelrc
@@ -3,7 +3,7 @@
         ["import", {
             "libraryName": "antd",
             "libraryDirectory": "es",
-            "style": true,   // or 'css'
+            "style": true
         }]
     ]
 }
