--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@types/jest": "^25.2.1",
     "@types/node": "^13.11.1",
     "@types/webpack": "^4.41.11",
+    "antd": "^4.1.4",
     "awesome-typescript-loader": "^5.2.1",
+    "babel-plugin-import": "^1.13.0",
     "html-webpack-plugin": "^4.2.0",
     "jest": "^25.3.0",
     "source-map-loader": "^0.2.4",
