--- a/package.json
+++ b/package.json
@@ -31,9 +31,14 @@
     "antd": "^4.1.4",
     "awesome-typescript-loader": "^5.2.1",
     "babel-plugin-import": "^1.13.0",
+    "css-loader": "^3.5.3",
+    "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.2.0",
     "jest": "^25.3.0",
+    "node-sass": "^4.14.0",
+    "sass-loader": "^8.0.2",
     "source-map-loader": "^0.2.4",
+    "style-loader": "^1.2.0",
     "ts-node": "^8.8.2",
     "ts-node-dev": "^1.0.0-pre.44",
     "tsconfig-paths": "^3.9.0",
