--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/node": "^13.11.1",
     "@types/webpack": "^4.41.11",
     "antd": "^4.1.4",
+    "autoprefixer": "^9.8.6",
     "awesome-typescript-loader": "^5.2.1",
     "babel-plugin-import": "^1.13.0",
     "clean-webpack-plugin": "^3.0.0",
@@ -37,7 +38,11 @@
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.2.0",
     "jest": "^25.3.0",
+    "mini-css-extract-plugin": "^0.11.0",
     "node-sass": "^4.14.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "postcss-import": "^12.0.1",
+    "postcss-loader": "^3.0.0",
     "sass-loader": "^8.0.2",
     "source-map-loader": "^0.2.4",
     "style-loader": "^1.2.0",
@@ -45,6 +50,7 @@
     "ts-node-dev": "^1.0.0-pre.44",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^3.8.3",
+    "url-loader": "^4.1.0",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.10.3"
